delete duplicate Pdf file's and replace city name Chh. Sambhajinagar

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hi-Tech Institute of Technology, Aurangabad</title>
+    <title>Hi-Tech Institute of Technology, Chh. Sambhajinagar</title>
     <meta name="description" content="Hi-Tech Institute of Technology - A Pioneer to shape global Technocrats. Approved by AICTE, DTE Maharashtra & Affiliated to DBATU, Lonere." />
     <meta name="author" content="Hi-Tech Institute of Technology" />
 
-    <meta property="og:title" content="Hi-Tech Institute of Technology, Aurangabad" />
+    <meta property="og:title" content="Hi-Tech Institute of Technology, Chh. Sambhajinagar" />
     <meta property="og:description" content="A Pioneer to shape global Technocrats. Quality technical education in Engineering." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/Img-uploads/a8cbea0d-761e-4176-9664-da3929fe1b3c.png" />
